docker-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: my-storage
          mountPath: /var/lib/registry
      volumes:
      - name: my-storage
        persistentVolumeClaim:
          claimName: docker-registry-pv-claim
